2010-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* sec_helper.cc (set_cygwin_privileges): Enable SE_DEBUG_PRIVILEGE, if
	available.  Add comments.

2010-04-13  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (get_inet_addr): Only test the file for being a
	socket after opening it.  Retry if opening failed with sharing
	violation.  Explain why we do this.
	(fhandler_socket::bind): Create file with no sharing allowed.

2010-04-13  John Bowman  <bowman@math.ualberta.ca>

	* cygheap.cc (cwcsdup): Fix allocation size to accommodate sizeof WCHAR.
	(cwcsdup1): Ditto.

2010-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Bump DLL minor version number to 5.

2010-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* posix.sgml (std-notes): Improve lseek description.

2010-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tty.cc (fhandler_tty_slave::open): Add code to duplicate
	handles within a single process to simplify openpty case.
	(fhandler_tty_slave::cygserver_attach_tty): Correctly send Windows PID
	to cygserver, rather than the Cygwin PID.

2010-04-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class dev_console): Add backspace_keycode member.
	* fhandler_console.cc (fhandler_console::get_tty_stuff): Initialize
	backspace_keycode with CERASE.
	(fhandler_console::read): Return dev_state->backspace_keycode if the
	backspace key is pressed.
	(fhandler_console::char_command): Implement DECBKM escape sequence.

2010-04-10  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (fhandler_console::read): Default to sending
	CERASE character if termios VERASE field is zero.
	(fhandler_console::fixup_after_fork_exec): Avoid a spurious debug
	message.

2010-04-10  Christopher Faylor  <me+cygwin@cgf.cx>

	* mkvers.sh: Use modern date formats to construct the date.

2010-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__set_lc_time_from_win): Actually set